<resources>
    <string name="app_name">ExchangeRate</string>

    <string name="no_network">Нету сети</string>
    <string name="try_again">Попробовать снова</string>
    <string name="cash_rate">Наличный курс</string>
    <string name="bycard_rate">Безналичный курс</string>

    <!--    strings for cardView -->
    <string name="name">Название</string>
    <string name="buying">Покупка</string>
    <string name="selling">Продажа</string>
    <string name="currency">USD</string>
    <string name="value">20</string>
</resources>